# release-drafter-demo

./: .gitignore  README.md  dev-requirements.txt  logging.yaml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: changelog-draft.yml  pr-check.yml
apps/server/: main.py  pyproject.toml
apps/server/langfarm_server/api/: main.py
apps/tracing/: pyproject.toml
apps/tracing/langfarm_tracing/: adder3.py  main.py
apps/tracing/tests/: test_adder.py
libs/core/: pyproject.toml
