[project]
name = "langfarm-tracing"
version = "0.0.1"
description = "Langfarm Tracing Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi >= 0.115.6",
  "langfarm-core",
]

[dependency-groups]
dev = [
    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]


[tool.uv.sources]
langfarm-core = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
