[project]
name = "langfarm-core"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tenacity >= 9.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>0",
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[tool.uv]
package = true

[tool.pyright]
venvPath = "../.."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
